@@ -1,5 +1,5 @@
 Package: bootsetup
-Version: 1.0.2
+Version: 1.0.3
 Section: admin
 Priority: optional
 Architecture: all
